--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <script src="/js/arrays.js"></script>
+    <script src="/js/filter.js"></script>
 </body>
 </html>
