--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <script src="/js/filter.js"></script>
+    <!-- <script src="/js/filter.js"></script> -->
+    <script src="/js/some-and-any.js"></script>
 </body>
 </html>
