--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hello</h1>
     <!-- <script src="/js/filter.js"></script> -->
-    <script src="/js/some-and-any.js"></script>
+    <!-- <script src="/js/some-and-every.js"></script> -->
+     <script src="/js/revisiting-sort.js"></script>
 </body>
 </html>
