--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Hello</h1>
     <!-- <script src="/js/filter.js"></script> -->
     <!-- <script src="/js/some-and-every.js"></script> -->
-     <script src="/js/revisiting-sort.js"></script>
+    <!-- <script src="/js/revisiting-sort.js"></script> -->
+     <script src="/js/reduce.js"></script>
 </body>
 </html>
